--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,8 @@ ARTICLE {
 	font-family: sans-serif;
 	font-size: 10px;
 	padding-bottom: 10px;
+	margin: 20px auto;
+	max-width: 100%;
 }
 
 H1 {
@@ -24,20 +26,17 @@ H1 {
 	text-align: left;
 }
 
-.bottom_line {
-	border-width: 2px;
-}
-
 #wrapper {
+	width: 900px;
     margin: 0 auto;
 }
 
-NAV {
+#nav {
 	font-family: sans-serif;
 	font-size: 10px;
 	font-weight: bold;
+	width: 20%;
 	float: left;
-	max-width: 20%;
 	overflow: hidden;
 	background-color: #FFFFFF;
 	padding: 10px;
@@ -46,7 +45,7 @@ NAV {
 
 #main {
 	float: left;
-	width: 50vw;
+	width: 60%;
 	background-color: #FFFFFF;
 	padding: 10px;
 	margin: 10px;
@@ -58,11 +57,20 @@ UL {
 }​
 
 IMG {
-	width: 50vw;
+	max-width: 100%;
 }
 
-FOOTER {
+.blogimage {
+	width: 100%;
+}
+
+.end {
 	float: left;
 	text-align: center;
 	width: 100%;
+}
+
+.ads {
+	width: 100%;
+	margin: 10px;
 }
